<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DetailActivity">

    <TextView
        android:id="@+id/order_idTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/order_id"/>

    <EditText
        android:id="@+id/order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:saveEnabled="false"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_idTv"
        app:layout_constraintBottom_toTopOf="@id/order_dateTv"/>

    <TextView
        android:id="@+id/order_dateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_dateTime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_id"
        app:layout_constraintBottom_toTopOf="@id/order_date"/>

    <EditText
        android:id="@+id/order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_dateTime"
        android:saveEnabled="false"
        android:inputType="datetime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_dateTv"
        app:layout_constraintBottom_toTopOf="@id/order_descTv"/>

    <TextView
        android:id="@+id/order_descTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_date"
        app:layout_constraintBottom_toTopOf="@id/order_desc"/>

    <EditText
        android:id="@+id/order_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_description"
        android:saveEnabled="false"
        android:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_descTv"
        app:layout_constraintBottom_toTopOf="@id/order_priceTV"/>

    <TextView
        android:id="@+id/order_priceTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_desc"
        app:layout_constraintBottom_toTopOf="@id/order_price"/>

    <EditText
        android:id="@+id/order_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_price"
        android:saveEnabled="false"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_priceTV"
        app:layout_constraintBottom_toTopOf="@id/order_dlineTv"/>

    <TextView
        android:id="@+id/order_dlineTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_deadLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_price"
        app:layout_constraintBottom_toTopOf="@id/order_dline"/>

    <EditText
        android:id="@+id/order_dline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_deadLine"
        android:saveEnabled="false"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_dlineTv"
        app:layout_constraintBottom_toTopOf="@id/button_back"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_save"
        app:layout_constraintTop_toBottomOf="@id/order_dline"
        app:layout_constraintBottom_toTopOf="@+id/button_delete"/>

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_change"
        app:layout_constraintLeft_toRightOf="@id/button_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_dline"
        app:layout_constraintBottom_toTopOf="@id/button_create"/>

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_delete"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_create"
        app:layout_constraintTop_toBottomOf="@id/button_back"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create"
        app:layout_constraintLeft_toRightOf="@id/button_delete"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_save"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>